# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.24 2008/04/10 08:31:42 nelchael Exp $

*tuxonice-sources-2.6.24-r5 (10 Apr 2008)

  10 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.24-r5.ebuild:
  Revision bump for genpatches-6.

*tuxonice-sources-2.6.24-r4 (30 Mar 2008)

  30 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.24-r4.ebuild:
  Revision bump for genpatches-5.

  24 Mar 2008; Markus Meier <maekke@gentoo.org>
  tuxonice-sources-2.6.23-r10.ebuild:
  amd64 stable, bug #202064

  01 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  tuxonice-sources-2.6.23-r10.ebuild, tuxonice-sources-2.6.24-r3.ebuild:
  Use K_EXTRAELOG instead of K_EXTRAEINFO (bug #199464).

*tuxonice-sources-2.6.24-r3 (26 Feb 2008)
*tuxonice-sources-2.6.23-r11 (26 Feb 2008)

  26 Feb 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r11.ebuild, +tuxonice-sources-2.6.24-r3.ebuild:
  Revision bump for new genpatches.

  21 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  tuxonice-sources-2.6.23-r10.ebuild:
  stable x86, bug 202064

  20 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  tuxonice-sources-2.6.23-r9.ebuild:
  stable x86, bug 202064

  17 Feb 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r10.ebuild:
  Revision bump for genpatches 9, TuxOnIce 3.0-rc5 for 2.6.23.16.

*tuxonice-sources-2.6.24-r2 (12 Feb 2008)

  12 Feb 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/2.6.24-3.0-rc5-userui-fix.patch,
  -tuxonice-sources-2.6.23-r10.ebuild, +tuxonice-sources-2.6.24-r2.ebuild:
  Remove 2.6.23-r10 as tuxonice requires resync for >2.6.23.14 (bug #209755),
  add 2.6.24-r2 with a patch to correctly support userui (bug #209775).

*tuxonice-sources-2.6.23-r10 (11 Feb 2008)

  11 Feb 2008; Krzysiek Pawlik <nelchael@gentoo.org>