@@ -41,7 +41,7 @@ DIST tuxonice-3.0-rc5-for-2.6.23.16.patch.bz2 112579 RMD160 8cb9b1a056bb110ea8b8
 DIST tuxonice-3.0-rc5-for-2.6.24.patch.bz2 113258 RMD160 c1fde23de970b6347302ae2bff71bf3ab1bfbeb3 SHA1 bf559c8dead1d0372d3388e4f9d2c4d145862ec1 SHA256 0a3b502b89bebbcd0f701a0e89c072797257ce766b2ea2d2bda1f6762ca2ce9b
 EBUILD tuxonice-sources-2.6.23-r1.ebuild 1263 RMD160 5b1a3ec6d6d397e8f2bab70d616f1479484b10ac SHA1 ba7a9b5b5751aefbc970f8c026347e7193cec02b SHA256 bdbfee47f54ac71103671a427970a78979ad922e921930678b9bb85929493a6c
 EBUILD tuxonice-sources-2.6.23-r10.ebuild 1262 RMD160 2cc9189259cf5718aafdb8de59803773ae979f90 SHA1 5fb7a99ad0923e7d8d8e71e2100d45935cacf3da SHA256 63b05c8b7a6f74cf8e82ea17cd5e88a8d6d8f73a1a200628874ac4f42b9095c4
-EBUILD tuxonice-sources-2.6.23-r11.ebuild 1268 RMD160 e763cbf5a86178fa59eaf8b70e3bc4c8dfaf3684 SHA1 a68dc213228ab07484065276e31707704e237352 SHA256 97a5dec5764d9a06be59c12ff91eca8a1027f025000c84c3a63cfc6b9223cfb8
+EBUILD tuxonice-sources-2.6.23-r11.ebuild 1267 RMD160 e63914c829af9b34301b2d5aeb23697be1bf3694 SHA1 881b8f591cf76ddb494730caf03c06ad0b38b832 SHA256 deafd3d16d0edb2bcd583ca32581ba196e4f2f2fcafdc9f950da0d07d7fba478
 EBUILD tuxonice-sources-2.6.23-r2.ebuild 1265 RMD160 e62bca066bcbcb2f5be89f2b24940a7651b2319a SHA1 242d31bd8d83441c2bef0abf4ca7f1ee87e32a01 SHA256 faf6a6cd387690f8bfb9dadce6054c2eb87ec2241455b790b8eb5c8a852e1eba
 EBUILD tuxonice-sources-2.6.23-r3.ebuild 1265 RMD160 d9bb37371d40283b2bd6eb7905bacaf2f32bf7d7 SHA1 3e82b20f5c7a5c49e8aae760492f37c1c377e1ce SHA256 e2004e23fe71920f43c123b1a71893e2d8dffe38f620c346fd4950c2eb8aa9ae
 EBUILD tuxonice-sources-2.6.23-r4.ebuild 1265 RMD160 45f3973a002275a2384169f5ee1d590901cffebb SHA1 8cc1fb7113270fbf56de1eadd1941b9f6b9f59a4 SHA256 5b26b79e00bedf20096fc152971e9d4fc47db4048baa7142b058d67348d4d62b
@@ -54,15 +54,15 @@ EBUILD tuxonice-sources-2.6.23.ebuild 1258 RMD160 a7aed0774ce805c37e98f829f826af
 EBUILD tuxonice-sources-2.6.24-r1.ebuild 1263 RMD160 a4316b603156d304ebcb939c373590f6befec04c SHA1 c831ca0f010ad010aaad6bd64f5567a4cf57c4a5 SHA256 9a4329a85daec0d2e86a9c021f37d0a310c918492129b83660ead2a0860a8b24
 EBUILD tuxonice-sources-2.6.24-r2.ebuild 1332 RMD160 d42d4ef462eea710014883bbd6d28a2c04aa937d SHA1 932e5e8d0124367c0f51cce7f2c5fdc6753ce376 SHA256 7c861ae02ec6aef618cc0d2bcc5d7d791f4f5b3053ee9534807a01677c3fa5b5
 EBUILD tuxonice-sources-2.6.24-r3.ebuild 1327 RMD160 f16a520f389408f01f38dcf0dc29a39caf3fcd14 SHA1 65a5246dceadeb4f38f0d45ae77ccf32d36b6ebe SHA256 debbff1d08d18887a04430d1fdebf19e1d1d08de30342b8b068c68cc6f84d67d
-EBUILD tuxonice-sources-2.6.24-r4.ebuild 1331 RMD160 ef49d69478add7962f72362a59ce6e6b2b0b3aaa SHA1 cc5a2fcf74be7b564b7cdd5d42c225af4ebacb24 SHA256 1fdd0b1ef393e1a829e81d72a823b178c374cbfc5f25464c0e473654ab2d90df
+EBUILD tuxonice-sources-2.6.24-r4.ebuild 1330 RMD160 5da96bb1ce715fbd17c782ddf3c1a7b24c8b0e1e SHA1 4c868722a58ca2d2e5eadfbc226b6d85149f4ee6 SHA256 3fccb9fbc6f96ef7df4110b9beac67e28d0470248bca53a5cce0a94779c3254d
 EBUILD tuxonice-sources-2.6.24-r5.ebuild 1331 RMD160 c43bdd6ed1eb16ebae934c8dc3d8b892bb38d7f8 SHA1 7cb9ccebb85cacf46248244e130c966510189cd2 SHA256 be1dd16d812ebafe51b57e5b02d17534ff5643c4f58a11c3d3fc568c2193ee9b
 EBUILD tuxonice-sources-2.6.24.ebuild 1260 RMD160 d021d9745d9ef3bbc98c01591a6de9a3db01e7cb SHA1 17e2401aeb98992f0dee95e1d21702fc38f44a60 SHA256 8408869ee295a43dab769cc6565a09ca74422bfac851f4b6f4e8968eedae23be
-MISC ChangeLog 28936 RMD160 939e7789e27e3c03625d87b8c2cff308b6d1691d SHA1 9fd65fa92efdb0f6fe4cde399dd3fe72dc23bf54 SHA256 525857759d92b05f1191acf52e1c72a0568ec0fef7d64ddde0fe30dca8b6792a
+MISC ChangeLog 29082 RMD160 5b3f97fc462581df9d0db3827e0b55868bd5b59e SHA1 6fc99c26eb33dbc696d1c04590f71c21b4bdbee6 SHA256 3c6a8973d2d98ad0fad82410c09609ef116853671c879c67805704a03c83caad
 MISC metadata.xml 278 RMD160 ed11e2348ca2d8f2bd5d647afab7eedf49ed4fea SHA1 7fecfe735fd49536863c0045aa1548860ad89797 SHA256 17c4da4868f175afef2cf8bca329a88c874b117ed9c242ec2139864475606bbe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkf90HUACgkQgo/w9rxVVVHRdwCfVMpvMWInUltgQba/eXgK+3qX
-g7IAoI4SRoeEQ6rQFcJmKAHfb74MCvNE
-=U72r
+iEYEARECAAYFAkf90kEACgkQgo/w9rxVVVFI7ACfcO6/6OrL5gzbvBwLaKNQOG5G
+K8sAniGSjiG25SabDg3O/LyrtIo4bVF2
+=f4Me
 -----END PGP SIGNATURE-----
