@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.24 2008/04/10 08:31:42 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.25 2008/04/10 08:39:22 nelchael Exp $
+
+  10 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  tuxonice-sources-2.6.23-r11.ebuild, tuxonice-sources-2.6.24-r4.ebuild:
+  Stable on amd64.
 
 *tuxonice-sources-2.6.24-r5 (10 Apr 2008)
 
